--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -167,10 +167,12 @@ if COND_SEGMENT
   segment/segment.sh: noisechisel/noisechisel.sh.log
 endif
 if COND_STATISTICS
-  MAYBE_STATISTICS_TESTS = statistics/basicstats.sh statistics/estimate_sky.sh
+  MAYBE_STATISTICS_TESTS = statistics/basicstats.sh statistics/estimate_sky.sh \
+                           statistics/from-stdin.sh
 
-  statistics/basicstats.sh:   mknoise/addnoise.sh.log
+  statistics/basicstats.sh: mknoise/addnoise.sh.log
   statistics/estimate_sky.sh: mknoise/addnoise.sh.log
+  statistics/from-stdin.sh: prepconf.sh.log
 endif
 if COND_TABLE
   MAYBE_TABLE_TESTS = table/txt-to-fits-binary.sh		\
