Input for stdin tests of Statistics now in tarball
Until now, the input file for the test on reading from standard input was
only in the version controlled source, but not actually included in the
tarball. With this commit, this mistake is correced.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -255,7 +255,7 @@ EXTRA_DIST = $(TESTS) during-dev.sh buildprog/simpleio.c crop/cat.txt     \
   match/positions-1.txt match/positions-2.txt mkprof/mkprofcat1.txt       \
   mkprof/ellipticalmasks.txt mkprof/clearcanvas.txt mkprof/mkprofcat2.txt \
   mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt mkprof/radeccat.txt         \
-  table/table.txt
+  statistics/stdin-input.txt table/table.txt
 
 
 
