Checking for LZMA library (in XZ Utils) at configure time
To enable static builds with libtiff, we'll need to check the presence of
liblzma (part of XZ Utils). But we don't need to abort the configure script
if its not present.

--- a/configure.ac
+++ b/configure.ac
@@ -341,7 +341,12 @@ AM_CONDITIONAL([COND_HASLIBJPEG], [test "x$has_libjpeg" = "xyes"])
 
 
 
-# Check libtiff:
+# Check libtiff: If an LZMA libray (part of the XZ Utils) is present,
+# libtiff has probably been built with it. So we'll also need to link with
+# the LZMA library. But if libtiff hasn't been linked with it and its
+# present, there is no problem, the linker will just pass over it. So we
+# don't need to stop the build if this fails.
+AC_SEARCH_LIBS([lzma_stream_decoder], [lzma], [], [])
 AC_SEARCH_LIBS([TIFFOpen], [tiff],
                [has_libtiff=yes], [has_libtiff=no; missing_optional_lib=yes])
 AS_IF([test "x$has_libtiff" = "xyes"],
