Some explanations in configure.ac regarding static builds
Static builds are a little complicated because all the dependency libraries
of things like `libcurl' and `libssl' (necessary for `libcurl' and
`libgit2') will also have to be done statically. An explanation was added
above the appropriate section in `configure.ac' to help explain this issue.

--- a/configure.ac
+++ b/configure.ac
@@ -275,8 +275,13 @@ AC_SEARCH_LIBS([gsl_integration_qng], [gsl], [],
 # no problem for Gnuastro either. So there is no need to stop the configure
 # script if libcurl isn't found.
 #
-# For static builds, libcurl depends on linking with zlib. So we'll need to
-# also search for that.
+# For static builds, linking libcurl (also built in static-only mode) will
+# depend on linking with zlib. So we'll need to also search for that
+# also. But if libcurl isn't built in static-only mode, then it will have
+# undefined symbols for many libraries (for example libpsl, libidn2,
+# librtmp, libldap). So if you intend to make Gnuastro statically, then
+# build Libcurl in static-only mode so you won't have to check for all
+# these extra libraries here.
 AC_SEARCH_LIBS([deflateInit_], [z], [], [])
 AC_SEARCH_LIBS([curl_global_init], [curl], [], [])
 AC_SEARCH_LIBS([ffopen], [cfitsio], [],
