New --colormap in ConvertType, with HSV, SLS and gray colormaps
Until now, for displaying single-channel datasets, the only option in
ConvertType was grayscale. With this commit a new `--colormap' option has
been added that allows the specification of which color map to use.

--- a/bin/convertt/Makefile.am
+++ b/bin/convertt/Makefile.am
@@ -31,9 +31,9 @@ bin_PROGRAMS = astconvertt
 ## Reason for linking with `libgnu' described in `bin/TEMPLATE/Makefile.am'.
 astconvertt_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lgnuastro
 
-astconvertt_SOURCES = main.c ui.c convertt.c
+astconvertt_SOURCES = main.c ui.c convertt.c color.c
 
-EXTRA_DIST = main.h authors-cite.h args.h ui.h convertt.h
+EXTRA_DIST = main.h authors-cite.h args.h ui.h convertt.h color.h
 
 
 
