--- a/bin/convertt/astconvertt.conf
+++ b/bin/convertt/astconvertt.conf
@@ -24,6 +24,7 @@
  widthincm            10.0
  borderwidth          1
  output               jpg
+ colormap             gray
 
 # Flux:
  invert               0
