NoiseChisel: new --pseudoconcomp for connectivity of pseudo-dets
This new option allows specifying what kind of connectivity is used for
identifying pseudo-detections. Until now this option was hard-coded in
NoiseChisel, so it was necessary to allow the user to set any connectivity
they prefer for their dataset.

--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -40,6 +40,7 @@
  sigmaclip           3,0.2
  dthresh               0.0
  holengb                 8
+ pseudoconcomp           8
  snminarea              10
  minnumfalse           100
  snquant              0.99
