--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -39,6 +39,8 @@
  minskyfrac            0.7
  sigmaclip           3,0.2
  dthresh               0.0
+ dopening                1
+ dopeningngb             4
  holengb                 8
  pseudoconcomp           4
  snminarea              10
