FITS (program and library): Parsing FITS date formatted strings
Two new functions were added in the FITS library to allow parsing of FITS
date formatted strings. `gal_fits_key_date_to_struct_tm' will convert it to
C's broken-down time sturcture and `gal_fits_key_date_to_seconds' will
convert it to the Unix epoch time. The latter is now called by the Fits
program through the new `--datetosec' option to enable easy access to this
feature which is very useful in using the date-related FITS keywords.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -215,18 +215,22 @@ gnulib_modules="
     func
     math
     argp
+    time
     fcntl
     regex
     error
     nproc
     stdint
     strtod
+    mktime
     getline
     strcase
     gendocs
     gpl-3.0
     mbstok_r
     inttypes
+    sys_time
+    strptime
     faccessat
     system-posix
     secure_getenv
