--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -137,7 +137,7 @@ dist_man_MANS = $(MAYBE_ARITHMETIC_MAN) $(MAYBE_BUILDPROG_MAN)          \
   $(MAYBE_CROP_MAN) $(MAYBE_FITS_MAN) $(MAYBE_MATCH_MAN)                \
   $(MAYBE_MKCATALOG_MAN) $(MAYBE_MKNOISE_MAN) $(MAYBE_MKPROF_MAN)       \
   $(MAYBE_NOISECHISEL_MAN) $(MAYBE_SEGMENT_MAN) $(MAYBE_STATISTICS_MAN) \
-  $(MAYBE_TABLE_MAN) $(MAYBE_WARP_MAN)
+  $(MAYBE_TABLE_MAN) $(MAYBE_WARP_MAN) man/astscript-sort-by-night.1
 
 
 ## See if help2man is present or not. When help2man doesn't exist, we don't
@@ -202,6 +202,11 @@ man/astmkprof.1: $(top_srcdir)/bin/mkprof/args.h  $(ALLMANSDEP)
 man/astnoisechisel.1: $(top_srcdir)/bin/noisechisel/args.h  $(ALLMANSDEP)
 	$(MAYBE_HELP2MAN) -n "detect signal in a noisy image"              \
 	                  --libtool $(toputildir)/noisechisel/astnoisechisel
+
+man/astscript-sort-by-night.1: $(top_srcdir)/bin/script/sort-by-night.in   \
+                               $(ALLMANSDEP)
+	$(MAYBE_HELP2MAN) -n "Sort input FITS files by night"              \
+	                  --libtool $(toputildir)/script/astscript-sort-by-night
 
 man/astsegment.1: $(top_srcdir)/bin/segment/args.h  $(ALLMANSDEP)
 	$(MAYBE_HELP2MAN) -n "segmentation based on signal structure"      \
