Copyright notice added to remaining config and README files
After doing a systematic search for files without a copyright notice, a few
more were found that didn't have a notice. So a notice was added for them.

I used this Bash command to find the files:

for f in $(find ./ -type f); do \
  if [[ $f != *.git* ]]; then \
    n=$(grep -i copyright $f | wc -l); \
    echo "$n $f"; \
  fi; \
done | awk '$1==0'

--- a/.autom4te.cfg
+++ b/.autom4te.cfg
@@ -1,6 +1,6 @@
 # Configuration file for autom4te
 # ===============================
-
+#
 # autom4te is used to create the familiar `./configure' script from
 # configure.ac (hand written by Gnuastro developers). autom4te is
 # called during the bootstrapping process (see README-hacking, or the
@@ -13,10 +13,16 @@
 # configuration file, we are asking autom4te to make its cache
 # directory within the bootstrapped directory to keep things on the
 # top directory clean.
+#
+# Copying and distribution of this file, with or without modification,
+# are permitted in any medium without royalty provided the copyright
+# notice and this notice are preserved.  This file is offered as-is,
+# without any warranty.
+
+
 
 # We are using the Autoconf manual's "Customizing autom4te" and
 # "Invoking autom4te" sections as a reference for this file.
-
 begin-language: "Autoconf-without-aclocal-m4"
 args: --cache=./bootstrapped/autom4te.cache
 end-language: "Autoconf-without-aclocal-m4"
