.gitignore with copyright using better search for copyright notice
In the previous commit, a copyright notice was added after a systematic
search of the version controlled files. However, we missed `.gitignore'
(because we were discarding those with the `*.git*' pattern to avoid files
in the `.git' directory). We fixed this by using this command instead:

for f in $(find ./ -type f); do \
  if [[ $f != ./.git/* ]]; then \
    n=$(grep -i copyright $f | wc -l); \
    echo "$n $f"; \
  fi; \
done | awk '$1==0'

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
 # Files to ignore in version control (Git) -*- conf-unix -*-
 # ==========================================================
-
+#
 # The files satisfying the patterns here (one per line) are ignored by
 # the version control using Git, they are all outputs of the various
 # tools used to built Gnuastro, so we don't need to keep their
 # history.
-
+#
 # To help readability, please add new files based on the length of the line
 # you wish to add.
+#
+# Copying and distribution of this file, with or without modification,
+# are permitted in any medium without royalty provided the copyright
+# notice and this notice are preserved.  This file is offered as-is,
+# without any warranty.
 
 
 
